[gd_scene load_steps=7 format=3 uid="uid://bj28rvjdxj38x"]

[ext_resource type="Script" path="res://levels/Main/Main.gd" id="1_gsfat"]
[ext_resource type="Texture2D" uid="uid://drx5sxhyg8sjy" path="res://assets/media/photo/MainMenu.jpg" id="2_b5p7b"]
[ext_resource type="Theme" uid="uid://dsejfmreade8h" path="res://assets/media/themes/menutheme.tres" id="3_2cu8u"]

[sub_resource type="SystemFont" id="SystemFont_n78g3"]
font_names = PackedStringArray("OpenDyslexic3")

[sub_resource type="LabelSettings" id="LabelSettings_62wrm"]
font = SubResource("SystemFont_n78g3")
font_size = 85
font_color = Color(0.211765, 0.211765, 0.211765, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_tvd3r"]
properties/0/path = NodePath("Chatbox:text")
properties/0/spawn = false
properties/0/sync = true
properties/0/watch = true

[node name="Main" type="Node3D"]
script = ExtResource("1_gsfat")

[node name="Level Spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://levels/Lobby/Lobby.tscn", "res://levels/Level1/Level1.tscn")
spawn_path = NodePath("..")
spawn_limit = 1

[node name="Player Spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://assets/players/player.tscn")
spawn_path = NodePath("..")

[node name="PlayersHud" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="PlayersHud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthPanel" type="Panel" parent="PlayersHud/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -123.0
offset_top = -26.0
grow_horizontal = 0
grow_vertical = 0

[node name="HealthLabel" type="Label" parent="PlayersHud/Control/HealthPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Health: "

[node name="HealthCount" type="Label" parent="PlayersHud/Control/HealthPanel"]
layout_mode = 0
offset_left = 60.0
offset_right = 100.0
offset_bottom = 23.0
metadata/_edit_use_anchors_ = true

[node name="MenuCanvasLayer" type="CanvasLayer" parent="."]

[node name="Main Menu Container" type="Control" parent="MenuCanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2cu8u")

[node name="MainMenu2" type="Sprite2D" parent="MenuCanvasLayer/Main Menu Container"]
position = Vector2(1282, 645)
scale = Vector2(2.12032, 1.73671)
texture = ExtResource("2_b5p7b")

[node name="Main Menu Label" type="Label" parent="MenuCanvasLayer/Main Menu Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -566.0
offset_right = 566.0
offset_bottom = 94.0
grow_horizontal = 2
size_flags_horizontal = 4
text = "Multiplayer"
label_settings = SubResource("LabelSettings_62wrm")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MenuCanvasLayer/Main Menu Container"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 629.0
offset_top = -153.0
offset_right = -629.0
offset_bottom = 154.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/Main Menu Container/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Host Button" type="Button" parent="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2cu8u")
text = "Host"

[node name="Join Button" type="Button" parent="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2cu8u")
text = "Join"

[node name="Room Code" type="LineEdit" parent="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2cu8u")
placeholder_text = "Room Code  (default: localhost)"
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Back Button" type="Button" parent="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2cu8u")
text = "Main Menu"

[node name="Pause Menu" type="PanelContainer" parent="MenuCanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.176563
anchor_top = 0.15
anchor_right = 0.823438
anchor_bottom = 0.85
offset_left = 327.0
offset_top = 240.0
offset_right = -327.0
offset_bottom = -239.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2cu8u")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="MenuCanvasLayer/Pause Menu"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/Pause Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Pause Menu Label" type="Label" parent="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Switch Level" type="Button" parent="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Switch Level"

[node name="Resume Button" type="Button" parent="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit Button" type="Button" parent="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Server Disconnected" type="Control" parent="MenuCanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="Sprite2D" parent="MenuCanvasLayer/Server Disconnected"]
position = Vector2(960, 540)
scale = Vector2(0.951333, 0.877805)
texture = ExtResource("2_b5p7b")

[node name="PanelContainer" type="PanelContainer" parent="MenuCanvasLayer/Server Disconnected"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 619.0
offset_top = 439.0
offset_right = -619.0
offset_bottom = -439.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_2cu8u")

[node name="MarginContainer" type="MarginContainer" parent="MenuCanvasLayer/Server Disconnected/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuCanvasLayer/Server Disconnected/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Pause Menu Label" type="Label" parent="MenuCanvasLayer/Server Disconnected/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2cu8u")
theme_override_font_sizes/font_size = 40
text = "Server Disconnected"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MenuCanvasLayer/Server Disconnected/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="Quit Button" type="Button" parent="MenuCanvasLayer/Server Disconnected/PanelContainer/MarginContainer/VBoxContainer2"]
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Return to Menu"

[node name="ChatCanvasLayer" type="CanvasLayer" parent="."]

[node name="ChatBox Container" type="Control" parent="ChatCanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -172.0
offset_right = -734.0
grow_horizontal = 2
grow_vertical = 0

[node name="Chatbox" type="TextEdit" parent="ChatCanvasLayer/ChatBox Container"]
layout_mode = 0
offset_right = 418.0
offset_bottom = 138.0
editable = false
context_menu_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
draw_spaces = true
scroll_smooth = true
caret_type = 1
metadata/_edit_use_anchors_ = true

[node name="Enter Text" type="TextEdit" parent="ChatCanvasLayer/ChatBox Container"]
layout_mode = 0
offset_top = 139.0
offset_right = 418.0
offset_bottom = 174.0
placeholder_text = "enter message (enter to send)"
context_menu_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
draw_spaces = true
scroll_smooth = true
caret_blink = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="ChatCanvasLayer/ChatBox Container"]
replication_config = SubResource("SceneReplicationConfig_tvd3r")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer/Host Button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer/Join Button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Main Menu Container/MarginContainer/VBoxContainer/Back Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Switch Level" to="." method="_on_switch_level_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Pause Menu/MarginContainer/VBoxContainer/Quit Button" to="." method="_on_pause_menu_quit_button_pressed"]
[connection signal="pressed" from="MenuCanvasLayer/Server Disconnected/PanelContainer/MarginContainer/VBoxContainer2/Quit Button" to="." method="_on_pause_menu_quit_button_pressed"]
